work/yaml/wekan/wekan-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    ingress-whitelist: "*.rdev.tech"
  name: wekan
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wekan
spec:
  rules:
  - host: wekan-dev.rdev.tech
    http:
      paths:
      - backend:
          serviceName: wekan
          servicePort: 80
  tls:
  - hosts:
    - wekan-dev.rdev.tech
    secretName: wekan-dev-tls-pem
---
apiVersion: v1
kind: Endpoints
metadata:
  name: wekan
subsets:
  - addresses:
      - ip: 192.168.80.89
    ports:
      - port: 2000

---
apiVersion: v1
kind: Service
metadata:
  name: wekan
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2000
